--- a/css.css
+++ b/css.css
@@ -1,12 +1,17 @@
 html{
 	overflow-y:hidden;
 }
+body{
+	padding: auto;
+	margin: auto;
+}
 #mainBox{
+	position: relative;
+	margin: auto;
 	display: none;
-	position: fixed;
 	width:0px;
 	height:0px;
-	border: 5px solid;
+	border: 6px solid;
 }
 #mainBox > #mainStart{
 	position: relative;
